--- a/stylehome.css
+++ b/stylehome.css
@@ -4,15 +4,26 @@
     margin: 0;
 }
 
+nav{
+    
+    
+}
 ul {
     font-size: 2em;
     text-align: right;
+    
 }
 
 li {
     display : inline-flex; 
     list-style: none;
     
+    
+}
+
+li a {
+    color: black;
+    text-decoration: none;
 }
 
 body {
@@ -25,6 +36,9 @@ body {
     font-size: 2em;
     text-align: center;
     margin: auto;
+    align-items: center;
+    justify-content: center;
+ 
 }
 
 
@@ -48,6 +62,8 @@ body {
     font-size: 1.5em;
     background-color: transparent;
     margin: auto;
-
-    
+}
+.bouton1 a{
+    text-decoration: none;
+    color: #ff6b91;
 }
