--- a/footer.css
+++ b/footer.css
@@ -17,7 +17,7 @@ footer {
         text-align: center;
         justify-content: center;
         align-items: center;
-        color:#e0bfa9;
+        color:#ffe5d1;
     
 }
 
@@ -27,7 +27,7 @@ footer {
     text-align: center;
     justify-content: center;
     align-items: center;
-    color:#e0bfa9;
+    color:#ffe5d1;
 }
 
 .brandon { 
@@ -35,12 +35,12 @@ footer {
     text-align: center;
     justify-content: center;
     align-items: center;
-    color:#e0bfa9;
+    color:#ffe5d1;
 }
 .jonathan { 
     font-family: sans-serif;
     text-align: center;
     justify-content: center;
     align-items: center;
-    color:#e0bfa9;
+    color:#ffe5d1;
 }
