--- a/header.css
+++ b/header.css
@@ -24,7 +24,7 @@ header nav ul li {
 header nav ul li a {
     text-decoration: none;
     text-transform: uppercase;
-    color: #e0bfa9;
+    color: #ffe5d1;
     display: block;
     margin-top: 25px;
     line-height: 70px;
@@ -33,7 +33,7 @@ header nav ul li a {
 }
   
 header nav ul li a:hover {
-    background-color:  #e0bfa9;
+    background-color:  #ffe5d1;
     color:  rgb(66, 66, 66);
 }
 
