--- a/stylerank.css
+++ b/stylerank.css
@@ -1,135 +1,124 @@
-header {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    background-color: rgb(66, 66, 66);;
+/* GENERAL */
+* {
+    margin: 0px;
+    padding: 0px;
 }
-
 body {
-    background-color: #e0bfa9;
+    background-color: #ffe5d1;
+    font-family: 'Indie Flower', cursive;
 }
 
-footer {
-    width: 100%;
-    margin: 0;
-    padding: 0;
+h1 {
+    font-size: 3.5em;
+    color: rgb(66, 66, 66);
+    text-align: center;
+    padding: 50px 0 30px 0;
+  }
+
+
+/* NAV */
+
+header {
+    font-family: Arial, sans-serif;
+    height: 100px;
     background-color: rgb(66, 66, 66);
 }
-
-footer h1 {
-    text-align: center;
+  
+header nav {
+    text-align: right;
+    padding-right: 20px;
 }
-
-#navbar {
-    display: flex;
-    justify-content: space-between;
+  
+header nav ul li {
+    display: inline-block;
+    height: 100%;
 }
-
-#navbar ul > li {
-    list-style: none;
-}
-
-#navbar a {
-    font-family: Sinhala MN;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 22px;
-    line-height: 26px;
-    text-align: center;
+  
+header nav ul li a {
     text-decoration: none;
-    color: black;
+    text-transform: uppercase;
+    color: #ffe5d1;
+    display: block;
+    margin-top: 25px;
+    line-height: 50px;
+    padding: 0 10px;
+    transition-duration: 0.5s;
+}
+  
+header nav ul li a:hover, header nav ul li a.current {
+    background-color:  #ffe5d1;
+    color:  rgb(66, 66, 66);
 }
 
-main {
+/* MAIN */
+
+main{
     display: flex;
     justify-content: center;
-    flex-flow: wrap;
+    padding: 20px 20px;
+    flex-direction: column;
+    flex-grow: 100%;
 }
 
-.hall-of-glory-container {
+main div{
     display: flex;
-    justify-content: center;
-    width: 187.5px;
-    height: 49px;
-    border: 1px solid black;
-    border-radius: 10px;
-    margin: 15px;
-    background-color: rgb(66, 66, 66);
-}
-
-.hall-of-glory-container h1 {
-    display: flex;
-    justify-content: center;
-    font-family: Sinhala MN;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 22px;
-    line-height: 26px;
-    text-align: center;
-    color: black;
-    margin: 12px;
+    align-items: center;
 }
 
 .table-container {
-    display: flex;
-    justify-content: center;
-    width: 335px;
-    height: 318px;
-    border: 1px solid black;
+    width: 100%;
+    height: 300px;
     border-radius: 10px;
-    margin: 15px;
+    margin: 20px auto;
     background-color: rgb(66, 66, 66);
+    border: solid 1px #ffe5d1;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
 .retry-button input {
-    display: flex;
-    justify-content: center;
-    font-family: Sinhala MN;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 21px;
-    text-align: center;
-    color: black;
+    font-size: 1em;
+    color: #ffe5d1;
     width: 100px;
-    height: 29px;
-    border: 1px solid black;
+    height: 40px;
     border-radius: 10px;
-    margin: 15px;
+    border: solid 1px #ffe5d1;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    margin:  20px auto;
     background-color: rgb(66, 66, 66);
 }
 
+
+/* FOOTER */
+
+footer {
+    height: 100px;
+    width: 100%;
+    background-color: rgb(66, 66, 66);
+}
+
+footer p {
+    font-family: Arial, Helvetica, sans-serif;
+    color : #ffe5d1;
+    text-align: center;
+    padding: 50px
+}
+
+
+
+
 @media screen and (min-width: 1280px)
 {
-    main {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-    }
 
-    .hall-of-glory-container {
-        width: 800px;
-        height: 80px;
-        margin-top: 30px;
-        margin-bottom: 30px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .hall-of-glory-container h1 {
-        font-family: Sinhala MN;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 50px;
-        line-height: 59px;
-        text-align: center;
-    }
-
+    /* MAIN */
+    
     .table-container {
         width: 1000px;
         height: 510px;
-        margin-left: auto;
-        margin-right: auto;
+        border-radius: 10px;
+        margin: 20px auto;
+        background-color: rgb(66, 66, 66);
+        border: solid 1px #ffe5d1;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     }
 
     .retry-button {
@@ -138,35 +127,18 @@ main {
     }
 
     .retry-button input {
-        width: 180px;
-        height: 90px;  
-        margin-top: 30px;
-        margin-bottom: 30px;
-        font-family: Sinhala MN;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 25px;
-        line-height: 29px;
-        text-align: center;
+        font-size: 1.5em;
+        color: #ffe5d1;
+        width: 150px;
+        height: 70px;  
+        border-radius: 10px;
+        border: solid 1px #ffe5d1;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+        margin:  50px auto;
+        background-color: rgb(66, 66, 66);
     }
 
-    #navbar h1 {
-        margin-left: 80px;
-    }
 
-    #navbar a {
-        font-family: Sinhala MN;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 50px;
-        line-height: 59px;
-        text-align: center;
-        color: black;
-    }
-
-    #navbar li {
-        display: inline;
-        margin-left: 80px;
-        margin-right: 80px;
-    }
 }
+
+
