--- a/styleaboutus.css
+++ b/styleaboutus.css
@@ -118,7 +118,10 @@ footer p {
     font-family: Arial, Helvetica, sans-serif;
     color : #ffe5d1;
     text-align: center;
-    padding-top: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 
 
@@ -164,9 +167,7 @@ footer p {
         text-align: justify;
         color: #ffe5d1;
         margin-bottom: 0px;
-
+    }}
 
 
     
-}
-  
