--- a/stylegame.css
+++ b/stylegame.css
@@ -4,10 +4,16 @@
     padding: 0px;
 }
 
+html, body {
+    min-height: 100vh;
+}
 body {
+    display: flex;
+    flex-direction: column;
     font-family: 'Indie Flower', cursive;
     font-size: 1em;
     background-color: #ffe5d1;
+
 }
 h1 {
     font-size: 3.5em;
@@ -97,7 +103,10 @@ footer p {
     font-family: Arial, Helvetica, sans-serif;
     color : #ffe5d1;
     text-align: center;
-    padding-top: 40px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -125,5 +134,8 @@ footer p {
         background-color: rgb(66, 66, 66);
         border: solid 1px #ffe5d1;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    }
+    main {
+        flex-grow: 1;
     }
 }
