--- a/stylehome.css
+++ b/stylehome.css
@@ -57,21 +57,22 @@ header nav ul li a:hover, header nav ul li a.current {
 
 /* bouton */
 
+.titlehome{
+    height: 80%;
+}
+
 .bouton1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 400px 0 0 0;
+    height: 100%;
 }
 
 .play {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+    position: absolute;
     font-size: 1.5em;
-    width: 150px;;
-    height: 70px;
+    width: 300px;
+    height: 150px;
     border-radius: 10px;
     border: solid 1px #ffe5d1;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
@@ -83,3 +84,22 @@ header nav ul li a:hover, header nav ul li a.current {
     color: #ffe5d1;
 }
 
+
+
+@media screen and (min-width: 1280px)
+{
+
+
+.titlehome{
+    height: 60%;
+}
+
+.play{
+    font-size: 3em;
+    width: 300px;
+    height: 150px;
+}
+
+
+
+}
