--- a/stylegame.css
+++ b/stylegame.css
@@ -70,35 +70,34 @@ header nav ul li a:hover, header nav ul li a.current {
 /* SECTION JEU */
 
 .sectionJeu{
-    display: flex;
-    align-items: center;
-    justify-content: center;
     padding: 20px 20px;
 }
 
 .zoneJeu{
     width: 90%;
-    height: 80vh;
+    height: 450px;
     background-color:  rgb(66, 66, 66);
-    display: flex;
-    justify-content: center;
-    align-items: center;
     border-radius: 10px;
     margin: 20px auto;
+    padding-bottom: 50px;
     background-color: rgb(66, 66, 66);
     border: solid 1px #ffe5d1;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
-/*
-.zoneJeu #card-container{
 
-    height: 200px;
-    width: 150px;
+#card-container{
+    margin: 20px;
+    display: grid;
+    row-gap: 20px;
+    grid: repeat(3, auto) / auto-flow auto; 
+    justify-items: center
+;
+
 }
-*/
+
 #card-container img { 
-    height: 200px;
-    width: 200px;
+    height: 100px;
+    width: 100px;
 }
 
 
@@ -125,28 +124,38 @@ footer p {
 @media screen and (min-width: 1280px) {
 
 
+    main {
+        flex-grow: 1;
+    }
+
 
     .sectionJeu{
-        display: flex;
-        align-items: center;
-        justify-content: center;
         padding: 20px 20px;
     }
     
     .zoneJeu{
         width: 1000px;
-        height: 500px;
+        height: 600px;
         background-color:  rgb(66, 66, 66);
-        display: flex;
-        justify-content: center;
-        align-items: center;
         border-radius: 10px;
         margin: 20px auto;
-        background-color: rgb(66, 66, 66);
         border: solid 1px #ffe5d1;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+        display: grid;
+        justify-items: center
+        
     }
-    main {
-        flex-grow: 1;
+
+    #card-container{
+        margin: 20px;
+        display: grid;
+        row-gap: 50px;
+        grid: repeat(3, 150px) / auto-flow 200px; 
+
+    }
+
+    #card-container img { 
+        height: 150px;
+        width: 150px;
     }
 }
