--- a/stylegame.css
+++ b/stylegame.css
@@ -22,16 +22,6 @@ h1 {
     padding: 50px 0 30px 0;
   }
 
-/*
-
-body {
-    background-image : url("images/background-donut.png");
-    background-size: cover;
-    height: 100vh;
-}
-
-*/
-
 
 /* NAV */
 header {
@@ -71,12 +61,27 @@ header nav ul li a:hover, header nav ul li a.current {
 
 .sectionJeu{
     padding: 20px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.sectionJeu label{
+    font-size: 1.5em;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.score-container{
+    margin: 20px;
+    height: 100%;
+    width: 200px;
+    font-size: 2em;
+    text-align: center;
 }
 
 .zoneJeu{
     width: 90%;
     height: 450px;
-    background-color:  rgb(66, 66, 66);
     border-radius: 10px;
     margin: 20px auto;
     padding-bottom: 50px;
