--- a/stylerank.css
+++ b/stylerank.css
@@ -65,7 +65,7 @@ main div{
     align-items: center;
 }
 
-.table-container {
+/*.table-container {
     width: 100%;
     height: 300px;
     border-radius: 10px;
@@ -74,6 +74,7 @@ main div{
     border: solid 1px #ffe5d1;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
+*/
 
 .retry-button button {
     font-size: 1em;
@@ -91,6 +92,41 @@ main div{
     text-decoration: none;
     color: #ffe5d1;
 }
+
+
+/* TABLEAU SCORE */
+
+
+ .table-container {
+    padding: 20px 0;
+    border-radius: 10px;
+  }
+  
+.table-container table {
+    width: 900px;
+    margin: 50px auto 50px auto;
+  
+    border-collapse: collapse;
+    border: 1px solid #eee;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  
+    text-align: center;
+    table-layout: fixed;
+  }
+
+ 
+.table-container table tr {
+    padding: 10px 10px;
+    background: rgb(66, 66, 66);
+    color: #fff;
+    text-transform: uppercase;
+  }
+  
+.table-container table td {
+    color:#ffe5d1;
+    font-size: 1.5em;
+    padding: 10px 10px;
+  }
 
 /* FOOTER */
 
@@ -118,17 +154,6 @@ footer p {
 
     /* MAIN */
     
-    .table-container {
-
-        width: 1000px;
-        height: 510px;
-        border-radius: 10px;
-        margin: 20px auto;
-        background-color: rgb(66, 66, 66);
-        border: solid 1px #ffe5d1;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    }
-
     .retry-button {
         margin-left: auto;
         margin-right: auto;
