--- a/styleaboutus.css
+++ b/styleaboutus.css
@@ -8,13 +8,19 @@ body {
     font-family: 'Indie Flower', cursive;
     font-size: 1em;
     background-color: #ffe5d1;
+    background-image : url("images/background-donut.png");
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 h1 {
     font-size: 3.5em;
-    color: rgb(66, 66, 66);
+    color: #351705;
     text-align: center;
     padding: 50px 0 30px 0;
+    text-shadow: 10px 0 0 #ffe5d1, 0 2px 0 #ffe5d1, 0 -2px 0 #ffe5d1,
+    -2px 0 0 #ffe5d1, 2px 2px 0 #ffe5d1, 2px -2px 0 #ffe5d1, -2px 2px 0 #ffe5d1,
+    -2px -2px 0 #ffe5d1, 0 0 10px #ffe5d1;
   }
 
 
@@ -22,7 +28,7 @@ h1 {
 header {
     font-family: Arial, sans-serif;
     height: 100px;
-    background-color: rgb(66, 66, 66);
+    background-color: #351705;
 }
   
 header nav {
@@ -48,7 +54,8 @@ header nav ul li a {
   
 header nav ul li a:hover, header nav ul li a.current {
     background-color:  #ffe5d1;
-    color:  rgb(66, 66, 66);
+    color:  #351705;
+    border-radius: 5px;
 }
 
 
@@ -69,7 +76,7 @@ header nav ul li a:hover, header nav ul li a.current {
     width: 100%;
     border-radius: 10px;
     margin: 20px auto;
-    background-color: rgb(66, 66, 66);
+    background-color: #351705;
     border: solid 1px #ffe5d1;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
@@ -111,7 +118,7 @@ article p {
 footer {
     height: 100px;
     width: 100%;
-    background-color: rgb(66, 66, 66);
+    background-color: #351705;
 }
 
 footer p {
@@ -139,7 +146,7 @@ footer p {
         width: 900px;
         border-radius: 10px;
         margin: 20px auto;
-        background-color: rgb(66, 66, 66);
+        background-color: #351705;
         border: solid 1px #ffe5d1;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     }
