--- a/stylerank.css
+++ b/stylerank.css
@@ -6,13 +6,19 @@
 body {
     background-color: #ffe5d1;
     font-family: 'Indie Flower', cursive;
+    background-image : url("images/background-donut.png");
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 h1 {
     font-size: 3.5em;
-    color: rgb(66, 66, 66);
+    color: #351705;
     text-align: center;
     padding: 50px 0 30px 0;
+    text-shadow: 10px 0 0 #ffe5d1, 0 2px 0 #ffe5d1, 0 -2px 0 #ffe5d1,
+    -2px 0 0 #ffe5d1, 2px 2px 0 #ffe5d1, 2px -2px 0 #ffe5d1, -2px 2px 0 #ffe5d1,
+    -2px -2px 0 #ffe5d1, 0 0 10px #ffe5d1;
   }
 
 
@@ -21,7 +27,7 @@ h1 {
 header {
     font-family: Arial, sans-serif;
     height: 100px;
-    background-color: rgb(66, 66, 66);
+    background-color: #351705;
 }
   
 header nav {
@@ -47,7 +53,8 @@ header nav ul li a {
   
 header nav ul li a:hover, header nav ul li a.current {
     background-color:  #ffe5d1;
-    color:  rgb(66, 66, 66);
+    color:  #351705;
+    border-radius: 5px;
 }
 
 /* MAIN */
@@ -65,16 +72,6 @@ main div{
     align-items: center;
 }
 
-/*.table-container {
-    width: 100%;
-    height: 300px;
-    border-radius: 10px;
-    margin: 20px auto;
-    background-color: rgb(66, 66, 66);
-    border: solid 1px #ffe5d1;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-}
-*/
 
 .retry-button button {
     font-size: 1em;
@@ -85,7 +82,7 @@ main div{
     border: solid 1px #ffe5d1;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     margin:  20px auto;
-    background-color: rgb(66, 66, 66);
+    background-color: #351705;
 }
 
 .submit a{
@@ -117,9 +114,10 @@ main div{
  
 .table-container table tr {
     padding: 10px 10px;
-    background: rgb(66, 66, 66);
+    background: #351705;
     color: #fff;
     text-transform: uppercase;
+
   }
   
 .table-container table td {
@@ -128,12 +126,13 @@ main div{
     padding: 10px 10px;
   }
 
+
 /* FOOTER */
 
 footer {
     height: 100px;
     width: 100%;
-    background-color: rgb(66, 66, 66);
+    background-color: #351705
 }
 
 footer p {
@@ -168,7 +167,7 @@ footer p {
         border: solid 1px #ffe5d1;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
         margin:  50px auto;
-        background-color: rgb(66, 66, 66);
+        background-color: #351705;
     }
 
 
