modif JS arraycards and add rank JS

--- a/stylegame.css
+++ b/stylegame.css
@@ -1,189 +1,178 @@
 /* GENERAL */
 * {
-    margin: 0px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
 
-html, body {
-    min-height: 100vh;
+html,
+body {
+  min-height: 100vh;
 }
 body {
-    display: flex;
-    flex-direction: column;
-    font-family: 'Indie Flower', cursive;
-    font-size: 1em;
-    background-color: #ffe5d1;
-
+  display: flex;
+  flex-direction: column;
+  font-family: 'Indie Flower', cursive;
+  font-size: 1em;
+  background-color: #ffe5d1;
 }
 h1 {
-    font-size: 3.5em;
-    color: rgb(66, 66, 66);
-    text-align: center;
-    padding: 50px 0 30px 0;
-  }
-
+  font-size: 3.5em;
+  color: rgb(66, 66, 66);
+  text-align: center;
+  padding: 50px 0 30px 0;
+}
 
 /* NAV */
 header {
-    font-family: Arial, sans-serif;
-    height: 100px;
-    background-color: rgb(66, 66, 66);
-}
-  
-header nav {
-    text-align: right;
-    padding-right: 20px;
-}
-  
-header nav ul li {
-    display: inline-block;
-    height: 100%;
-}
-  
-header nav ul li a {
-    text-decoration: none;
-    text-transform: uppercase;
-    color: #ffe5d1;
-    display: block;
-    margin-top: 25px;
-    line-height: 50px;
-    padding: 0 10px;
-    transition-duration: 0.5s;
-}
-  
-header nav ul li a:hover, header nav ul li a.current {
-    background-color:  #ffe5d1;
-    color:  rgb(66, 66, 66);
+  font-family: Arial, sans-serif;
+  height: 100px;
+  background-color: rgb(66, 66, 66);
 }
 
+header nav {
+  text-align: right;
+  padding-right: 20px;
+}
+
+header nav ul li {
+  display: inline-block;
+  height: 100%;
+}
+
+header nav ul li a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #ffe5d1;
+  display: block;
+  margin-top: 25px;
+  line-height: 50px;
+  padding: 0 10px;
+  transition-duration: 0.5s;
+}
+
+header nav ul li a:hover,
+header nav ul li a.current {
+  background-color: #ffe5d1;
+  color: rgb(66, 66, 66);
+}
 
 /* SECTION JEU */
 
-.sectionJeu{
-    padding: 20px 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.sectionJeu {
+  padding: 20px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.sectionJeu label{
-    font-size: 1.5em;
-    font-family: Arial, Helvetica, sans-serif;
+.sectionJeu label {
+  font-size: 1.5em;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.score-container{
-    margin: 20px;
-    height: 100%;
-    width: 200px;
-    font-size: 2em;
-    text-align: center;
+.score-container {
+  margin: 20px;
+  height: 100%;
+  width: 200px;
+  font-size: 2em;
+  text-align: center;
 }
 
-.zoneJeu{
-    width: 90%;
-    height: 450px;
-    border-radius: 10px;
-    margin: 20px auto;
-    padding-bottom: 50px;
-    background-color: rgb(66, 66, 66);
-    border: solid 1px #ffe5d1;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    perspective: 1000px;
+.zoneJeu {
+  width: 90%;
+  height: 450px;
+  border-radius: 10px;
+  margin: 20px auto;
+  padding-bottom: 50px;
+  background-color: rgb(66, 66, 66);
+  border: solid 1px #ffe5d1;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  perspective: 1000px;
 }
 
-#card-container{
-    margin: 20px;
-    display: grid;
-    row-gap: 20px;
-    grid: repeat(3, auto) / auto-flow auto; 
-    justify-items: center;
-
+#card-container {
+  margin: 20px;
+  display: grid;
+  row-gap: 20px;
+  grid: repeat(3, auto) / auto-flow auto;
+  justify-items: center;
 }
 
 .card.flip {
-    transform: rotateY(180deg)  scaleX(-1);
-    -webkit-transform: rotateY(180deg)  scaleX(-1);
+  transform: rotateY(180deg) scaleX(-1);
+  -webkit-transform: rotateY(180deg) scaleX(-1);
 }
 
-.card{
-    -webkit-transition: transform 0.6s;
-    transition: transform 0.6s;
-    height: 150px;
-    width: 150px;;
-    transform-style: preserve-3d;
-  }
-
-
-
-.front, .back { 
-    position: absolute;
-    height: 100px;
-    width: 100px;
-    border-radius: 5px;
-    backface-visibility: hidden;
+.card {
+  cursor: pointer;
+  -webkit-transition: transform 0.6s;
+  transition: transform 0.6s;
+  height: 150px;
+  width: 150px;
+  transform-style: preserve-3d;
 }
 
-
- .front {
-    transform: rotateY(180deg);
+.front,
+.back {
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  border-radius: 5px;
+  backface-visibility: hidden;
 }
 
+.front {
+  transform: rotateY(180deg);
+}
 
 /* FOOTER */
 
 footer {
-    height: 100px;
-    width: 100%;
-    background-color: rgb(66, 66, 66);
+  height: 100px;
+  width: 100%;
+  background-color: rgb(66, 66, 66);
 }
 
 footer p {
-    font-family: Arial, Helvetica, sans-serif;
-    color : #ffe5d1;
-    text-align: center;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #ffe5d1;
+  text-align: center;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-
-
 @media screen and (min-width: 1280px) {
+  main {
+    flex-grow: 1;
+  }
 
+  .sectionJeu {
+    padding: 20px 20px;
+  }
 
-    main {
-        flex-grow: 1;
-    }
+  .zoneJeu {
+    width: 1000px;
+    height: 600px;
+    background-color: rgb(66, 66, 66);
+    border-radius: 10px;
+    margin: 20px auto;
+    border: solid 1px #ffe5d1;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    display: grid;
+    justify-items: center;
+  }
 
+  #card-container {
+    margin: 20px;
+    display: grid;
+    row-gap: 50px;
+    grid: repeat(3, 150px) / auto-flow 200px;
+  }
 
-    .sectionJeu{
-        padding: 20px 20px;
-    }
-    
-    .zoneJeu{
-        width: 1000px;
-        height: 600px;
-        background-color:  rgb(66, 66, 66);
-        border-radius: 10px;
-        margin: 20px auto;
-        border: solid 1px #ffe5d1;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-        display: grid;
-        justify-items: center
-        
-    }
-
-    #card-container{
-        margin: 20px;
-        display: grid;
-        row-gap: 50px;
-        grid: repeat(3, 150px) / auto-flow 200px; 
-
-    }
-
-    #card-container img { 
-        height: 150px;
-        width: 150px;
-    }
+  #card-container img {
+    height: 150px;
+    width: 150px;
+  }
 }
