--- a/stylehome.css
+++ b/stylehome.css
@@ -7,7 +7,7 @@
 body {
     font-family: 'Indie Flower', cursive;
     font-size: 1em;
-    background-image : url("images/background-donut.png");
+    background-color:#ffe5d1;
     background-size: cover;
     background-attachment: fixed;
     height: 100vh;
@@ -23,36 +23,45 @@ h1 {
 
 /* NAV */
 header {
+    
+    list-style: none;
     font-family: Arial, sans-serif;
-    height: 100px;
+    width: 100%;
+    height: 120px;
     background-color: rgb(66, 66, 66);
-}
-  
+} 
 header nav {
     text-align: right;
-    padding-right: 20px;
-}
-  
-header nav ul li {
+    padding-right: 10px;
+}  
+header nav ul li  {
     display: inline-block;
     height: 100%;
-}
-  
+} 
 header nav ul li a {
     text-decoration: none;
     text-transform: uppercase;
     color: #ffe5d1;
     display: block;
-    margin-top: 25px;
     line-height: 50px;
     padding: 0 10px;
     transition-duration: 0.5s;
-}
-  
+    display: inline-flex;
+    flex-direction: row;
+    align-items: flex-end;
+} 
 header nav ul li a:hover, header nav ul li a.current {
     background-color:  #ffe5d1;
     color:  rgb(66, 66, 66);
 }
+
+
+
+img {
+    display: grid;
+    justify-self: flex-start;
+    width: 100px;
+    height: 100px;}
 
 
 /* bouton */
@@ -70,7 +79,7 @@ header nav ul li a:hover, header nav ul li a.current {
 
 .play {
     position: absolute;
-    font-size: 1.5em;
+    font-size: 3em;
     width: 300px;
     height: 150px;
     border-radius: 10px;
@@ -94,11 +103,6 @@ header nav ul li a:hover, header nav ul li a.current {
     height: 60%;
 }
 
-.play{
-    font-size: 3em;
-    width: 300px;
-    height: 150px;
-}
 
 
 
