--- a/stylehome.css
+++ b/stylehome.css
@@ -7,7 +7,7 @@
 body {
     font-family: 'Indie Flower', cursive;
     font-size: 1em;
-    background-color:#ffe5d1;
+    background-image : url("images/background-donut.png");
     background-size: cover;
     background-attachment: fixed;
     height: 100vh;
@@ -28,7 +28,6 @@ h1 {
 header {
     
     font-family: Arial, sans-serif;
-    width: 100%;
     height: 100px;
     background-color: #351705;
 }
@@ -94,6 +93,12 @@ header nav ul li a:hover, header nav ul li a.current {
 
 .titlehome{
     height: 60%;
+}
+
+play{
+    font-size: 3em;
+    width: 300px;
+    height: 150px;
 }
 
 
