--- a/stylegame.css
+++ b/stylegame.css
@@ -83,9 +83,11 @@ header nav ul li a.current {
 
 .score-container {
     padding: 5px;
+    height: 100%;
+    width: 200px;
     border: none;
     border-radius: 10px;
-    background-color: rgb(66, 66, 66);
+    background-color: #351705;
     resize: none;
     outline: none;
     color: #ffe5d1;
